Simplificando un poco el código de la página usando plantillas.

--- a/_variables.scss
+++ b/_variables.scss
@@ -1,19 +1,17 @@
-$mdc-theme-primary: #fedbd0;
-//mdc-theme-primary-variant: ;
+$mdc-theme-primary: #f8bbd0; // #fedbd0
+$mdc-theme-primary-variant: #f48fb1;
 $mdc-theme-on-primary: #442c2e;
-$mdc-theme-secondary: #feeae6;
-//$mdc-theme-secondary-variant: ;
+$mdc-theme-secondary: #ff80ab; // #feeae6
+$mdc-theme-secondary-variant: #ff4081;
 $mdc-theme-on-secondary: #442c2e;
-$mdc-theme-surface: #fffbfa;
+$mdc-theme-surface: #fce4ec; // #fffbfa
 $mdc-theme-on-surface: #442c2e;
+$mdc-theme-surface-secondary: #442c2e;
+$mdc-theme-on-surface-secondary: #fce4ec;
 $mdc-theme-background: #fff;
-$mdc-theme-on-background: #442c2e;
-// $md-theme-background-secondary: #f1f3f4;
-// $md-theme-surface: #FFF;
-// $md-theme-primary-variant: #512da8;
-// $md-theme-secondary-variant: #f57c00;
-// $md-theme-error: #B00020;
-// $md-theme-on-error: #FFF;
+$mdc-theme-on-background: #000;
+$mdc-theme-error: #B00020;
+$mdc-theme-on-error: #FFF;
 $mdc-text-theme-on-background: #000;
 $mdc-text-theme-on-background-rgb: 0, 0, 0;
 $mdc-text-theme-primary-on-background: rgba(0, 0, 0, .87);
@@ -24,6 +22,16 @@ $mdc-text-theme-on-background-inverse-rgb: 255, 255, 255;
 $mdc-text-theme-primary-on-background-inverse: rgba(255, 255, 255, .87);
 $mdc-text-theme-secondary-on-background-inverse: rgba(255, 255, 255, .6);
 $mdc-text-theme-disabled-on-background-inverse: rgba(255, 255, 255, .38);
+$mdc-text-theme-on-light: #000;
+$mdc-text-theme-on-light-rgb: 0, 0, 0;
+$mdc-text-theme-primary-on-light: rgba(0, 0, 0, .87);
+$mdc-text-theme-secondary-on-light: rgba(0, 0, 0, .6);
+$mdc-text-theme-disabled-on-light: rgba(0, 0, 0, .38);
+$mdc-text-theme-on-dark: #fff;
+$mdc-text-theme-on-dark-rgb: 255, 255, 255;
+$mdc-text-theme-primary-on-dark: rgba(255, 255, 255, .87);
+$mdc-text-theme-secondary-on-dark: rgba(255, 255, 255, .6);
+$mdc-text-theme-disabled-on-dark: rgba(255, 255, 255, .38);
 $mdc-font-family-1: Rubik, Roboto, Arial, sans-serif;
 $mdc-font-family-2: Roboto, Arial, sans-serif;
 $mdc-elevation--z1: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
@@ -57,17 +65,19 @@ $mdc-accelerated-easing: cubic-bezier(.4, .0, 1, 1);
 
 :root {
   --mdc-theme-primary: #{$mdc-theme-primary};
-  //--mdc-theme-primary-variant: $mdc-theme-primary-variant;
+  --mdc-theme-primary-variant: #{$mdc-theme-primary-variant};
   --mdc-theme-on-primary: #{$mdc-theme-on-primary};
   --mdc-theme-secondary: #{$mdc-theme-secondary};
-  //--mdc-theme-secondary-variant: $mdc-theme-secondary-variant;
+  --mdc-theme-secondary-variant: #{$mdc-theme-secondary-variant};
   --mdc-theme-on-secondary: #{$mdc-theme-on-secondary};
-//--mdc-theme-error: $mdc-theme-error;
-//--mdc-theme-on-error: $mdc-theme-on-error;
-//--mdc-theme-background: #{$mdc-theme-background};
+  --mdc-theme-error: #{$mdc-theme-error};
+  --mdc-theme-on-error: #{$mdc-theme-on-error};
+  --mdc-theme-background: #{$mdc-theme-background};
   --mdc-theme-on-background: #{$mdc-theme-on-background};
   --mdc-theme-surface: #{$mdc-theme-surface};
   --mdc-theme-on-surface: #{$mdc-theme-on-surface};
+  --mdc-theme-surface-secondary: #{$mdc-theme-surface-secondary};
+  --mdc-theme-on-surface-secondary: #{$mdc-theme-on-surface-secondary};
   --mdc-font-family-1: #{$mdc-font-family-1};
   --mdc-font-family-2: #{$mdc-font-family-2};
   --mdc-text-theme-on-background: #{$mdc-text-theme-on-background};
@@ -80,6 +90,16 @@ $mdc-accelerated-easing: cubic-bezier(.4, .0, 1, 1);
   --mdc-text-theme-primary-on-background-inverse: #{$mdc-text-theme-primary-on-background-inverse};
   --mdc-text-theme-secondary-on-background-inverse: #{$mdc-text-theme-secondary-on-background-inverse};
   --mdc-text-theme-disabled-on-background-inverse: #{$mdc-text-theme-disabled-on-background-inverse};
+  --mdc-text-theme-on-light: #{$mdc-text-theme-on-light};
+  --mdc-text-theme-on-light-rgb: #{$mdc-text-theme-on-light-rgb};
+  --mdc-text-theme-primary-on-light: #{$mdc-text-theme-primary-on-light};
+  --mdc-text-theme-secondary-on-light: #{$mdc-text-theme-secondary-on-light};
+  --mdc-text-theme-disabled-on-light: #{$mdc-text-theme-disabled-on-light};
+  --mdc-text-theme-on-dark: #{$mdc-text-theme-on-dark};
+  --mdc-text-theme-on-dark-rgb: #{$mdc-text-theme-on-dark-rgb};
+  --mdc-text-theme-primary-on-dark: #{$mdc-text-theme-primary-on-dark};
+  --mdc-text-theme-secondary-on-dark: #{$mdc-text-theme-secondary-on-dark};
+  --mdc-text-theme-disabled-on-dark: #{$mdc-text-theme-disabled-on-dark};
   --mdc-elevation--z1: #{$mdc-elevation--z1};
   --mdc-elevation--z2: #{$mdc-elevation--z2};
   --mdc-elevation--z3: #{$mdc-elevation--z3};
